Fixing lamp width, causing problem on mobile device

--- a/res/css/main.scss
+++ b/res/css/main.scss
@@ -134,8 +134,7 @@ body {
     .lamp {
       margin: auto;
       height: 100vh;
-      width: 500px;
-      //   background-color: rgb(20, 20, 20);
+      width: 400px;
       display: flex;
       flex-direction: column;
       align-items: center;
